--- a/src/style.css
+++ b/src/style.css
@@ -18,8 +18,6 @@ nav {
     padding: 2em;
 }
 
-
-
 .nav-list {
     display: flex;
     list-style-type: none;
@@ -27,4 +25,49 @@ nav {
 
 .nav-list-item {
     padding: 0 .4em;
+    text-decoration: none;
+    color: #111;
+}
+
+.nav-title {
+    color: #111;
+}
+
+.card {
+    padding: 1em;
+}
+
+.template-title {
+    text-align: center;
+    margin: .5em;
+
+}
+
+.template-title-name {
+    padding: .5em;
+
+}
+
+.template-container {
+    border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+    text-align: center;
+    border-radius: .5em;
+    overflow: hidden;
+    margin: 0 auto;
+}
+
+.template-header {
+    padding: .5em;
+}
+
+
+.template-item-container {
+    background-color: #555;
+}
+.links {
+    text-decoration: none;
+    color: #111;
 }
