--- a/src/style.css
+++ b/src/style.css
@@ -9,13 +9,19 @@ body {
     height: 100vh;
 }
 
-nav {
+.navbar {
     display: flex;
     justify-content: space-between;
     height: 70px;
     box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
     align-items: center;
     padding: 2em;
+}
+
+.home-page{
+    background: url("./assets/lukas-denier-YiXsjwJKXmo-unsplash.jpg") no-repeat center center/ cover;
+    height: 100vh;
+    color: white;
 }
 
 .nav-list {
@@ -34,8 +40,25 @@ nav {
 }
 
 .card {
+    text-align: center;
+}
+
+.btn-container {
+    background-color: rgb(161, 161, 161);
+    margin: 0 auto;
+    border: 1px solid black;
+    border-top: none;
+    width: 60%;
     padding: 1em;
 }
+
+.navigation-btn {
+    padding: .5em;
+    border-radius: 9px;
+    cursor: pointer;
+    background: transparent;
+}
+
 
 .template-title {
     text-align: center;
@@ -54,7 +77,7 @@ nav {
     flex-direction: column;
     width: 60%;
     text-align: center;
-    border-radius: .5em;
+    border-bottom: none;
     overflow: hidden;
     margin: 0 auto;
 }
@@ -65,7 +88,8 @@ nav {
 
 
 .template-item-container {
-    background-color: #555;
+    background-color: rgb(161, 161, 161);
+    border-bottom: 1px solid black;
 }
 .links {
     text-decoration: none;
