Added hamburger menu and new styling

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -5,9 +7,10 @@
 }
 
 body {
-    font-family: 'Roboto Serif', serif;
+    font-family: 'Quicksand';
     width: 100%;
     height: 100vh;
+    overflow: hidden;
 }
 
 .navbar {
@@ -15,12 +18,13 @@ body {
     justify-content: space-between;
     height: 70px;
     box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
+    background-image: linear-gradient(90deg, #838383, #dbdbdb);
     align-items: center;
     padding: 2em;
 }
 
 .home-page{
-    background: url("./assets/jake-weirick-Q_RBVFFXR_g-unsplash.jpg") no-repeat center center/ cover;
+    background: url("./assets/kenny-eliason-OjxsirfohHU-unsplash.jpg") no-repeat center center/ cover;
     height: 100vh;
     color: white;
     position: relative;
@@ -36,22 +40,16 @@ body {
 
 .home-title {
     font-size: 4em;
-    -webkit-text-stroke: 1px yellow;
-    color: transparent;
+    color: yellow;
 }
 
 .home-content {
     font-size: 1.5em;
 }
 
-.nav-title {
-}
-
+/* Styling for the homepage and the navigation on the homepage */
 .home-navbar {
-    width: 200px;
-    
     position: absolute;
-    margin: 0 auto;
     top: 35%;
     left: 0;
     right: 0;
@@ -61,7 +59,7 @@ body {
 .home-nav-list {
     list-style-type: none;
     margin: 0 auto;
-    width: 7em;
+    width: 9em;
     text-align: center;
     font-weight: bold;
     letter-spacing: .1em;
@@ -71,9 +69,10 @@ body {
     border: 1px solid rgb(240, 255, 32);
     border-radius: 1em;
     padding: 1em;
-    margin-top: 1em;
+    margin-top: .5em;
     color: rgb(240, 255, 32);
-    width: 8em;
+    width: 9em;
+    font-weight: 600;
 }
 
 .home-nav-list-item:hover {
@@ -81,8 +80,15 @@ body {
     color: black;
 }
 
+.home-nav-list-item:active {
+    background-color: rgb(240, 255, 32);
+    color: black;
+}
+
+/* Styling for the nav outside of the homepage */
+
 .nav-list {
-    display: flex;
+    display: none;
     list-style-type: none;
 }
 
@@ -92,32 +98,128 @@ body {
     color: #111;
 }
 
+.nav-list-item:hover {
+    color: yellow;
+}
+
+.nav-list-item:active {
+    color: yellow;
+}
+
 .nav-title {
     color: #111;
 }
 
-.card {
-    text-align: center;
+.nav-title:hover {
+    color: yellow;
 }
 
+.nav-title:active {
+    color: yellow;
+}
+
+
+.menu-container {
+    height: 100vh;
+}
+
+.card {
+    text-align: center;
+    padding-top: 3em;
+    height: 100%;
+}
+
+/* Styling for template / rendering */
+.template-title {
+    font-size: 2.4em;
+    text-align: center;
+    color: yellow;
+    text-transform: uppercase;
+}
+
+.template-title-name {
+    padding: .5em;
+}
+
+.template-container {
+    width: 20em;
+    margin: 0 auto;
+}
+
+.template-item-container {
+    margin: 0 auto;
+    border: 1px solid black;
+    border-top: 0;
+    color: yellow;
+    background-color: rgba(41, 41, 41, 0.8);
+}
+
+.template-container {
+    border-top: 1px solid black;
+}
+
+.template-item-container:hover {
+    background-color: rgb(255, 255, 0, 0.8);
+    color: black;
+}
+
+/* Styling for input field */
+.search {
+    padding: .5em;
+    border-radius: 1em;
+    border: 1px solid black;
+    margin: 3em 0 1em 0;
+}
+
+/* Styling for the loading message while we are fetching from the database / API  */
 .pending {
     text-align: center;
     font-size: 2.5em;
     margin-top: 5em;
 }
 
+.pending span{
+    width: 4px;
+    height: 4px;
+    margin: 0 3px;
+    background-color: black;
+    border-radius: 50%;
+    display: inline-block;
+    animation-name: dots;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+}
+
+.pending span:nth-child(2) {
+    animation-delay: 0.4s;
+}
+
+.pending span:nth-child(3) {
+    animation-delay: 0.8s;
+}
+
+@keyframes dots {
+    50% {
+        opacity: 0;
+        transform: scale(0.7) translateY(10px)
+    }
+}
+
+/* Styling for any error messages that come up if we cant fetch data */
 .error-msg {
     text-align: center;
     margin-top: 5em;
 }
 
 .btn-container {
-    background-color: rgb(161, 161, 161);
+    display: flex;
     margin: 0 auto;
-    border: 1px solid black;
     border-top: none;
     width: 60%;
     padding: 1em;
+    align-items: center;
+    justify-content: center;
 }
 
 .navigation-btn {
@@ -125,45 +227,26 @@ body {
     border-radius: 9px;
     cursor: pointer;
     background: transparent;
-}
-
-
-.template-title {
-    text-align: center;
-    margin: .5em;
-
-}
-
-.template-title-name {
-    padding: .5em;
-
-}
-
-.template-container {
     border: 1px solid black;
-    display: flex;
-    flex-direction: column;
-    width: 60%;
-    text-align: center;
-    border-bottom: none;
-    overflow: hidden;
-    margin: 0 auto;
+    margin: 0em .2em 0em .2em;
+    color: yellow;
+    background-color: rgb(41, 41, 41);
 }
 
-.template-header {
-    padding: .5em;
+.navigation-btn:hover {
+    background-color: yellow;
+    color: black;
 }
 
-
-.template-item-container {
-    background-color: rgb(161, 161, 161);
-    border-left: 1px solid black;
-    border-right: 1px solid black;
-    border-bottom: 1px solid black;
-    width: 60%;
-
-    margin: 0 auto;
+.navigation-btn:active {
+    background-color: yellow;
+    color: black;
 }
+.nav-number {
+    color: #fff;
+    width: 2em;
+}
+
 .links {
     text-decoration: none;
     color: #111;
@@ -172,3 +255,71 @@ body {
 .home-btn {
     display: none;
 }
+
+/* CSS for all the info  */
+.info-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 25em;
+    padding: 2em;
+    border: 1px solid black;
+    margin: 0 auto;
+    margin-top: 5em;
+    text-align: center;
+    line-height: 1.8em;
+    border-radius: .5em;
+
+    background-color: rgba(41, 41, 41, 0.8);
+    color: yellow;
+
+    box-shadow: 0 0 10px black;
+}
+
+.info-header {
+   margin-bottom: .5em;
+}
+.info-background-img {
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+}
+
+
+
+/* Styling for desktop */
+@media screen and (min-width: 600px) {
+    .nav-list {
+        display: flex;
+    }
+
+    .bm-burger-button {
+        display: none;
+    }
+
+    .home-nav-list {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        /* flex: 1 1 33%; */
+        flex-wrap: wrap;
+        width: 500px;
+    }
+
+    .home-links {
+        padding: 1em;
+    }
+
+    .home-nav-list > a {
+        padding: .3em .5em;
+    }
+
+    .navbar {
+        justify-content: space-between;
+    }
+
+    .empty-div {
+        width: 53.4px;
+    }
+  }
