--- a/src/style.css
+++ b/src/style.css
@@ -118,6 +118,16 @@ body {
     color: yellow;
 }
 
+.fa-jedi-order {
+    color: blue;
+    font-size: 1.5em;
+}
+
+.fa-old-republic {
+    color: red;
+    font-size: 1.5em;
+}
+
 
 .menu-container {
     height: 100vh;
@@ -284,7 +294,25 @@ body {
     height: 100vh;
     overflow: hidden;
 }
+.close-btn {
+    color: #212529;
+    background-color: #c2bdbd;
+    font-weight: 600;
+    width: 7em;
+    margin: 0 auto;
+    text-decoration: none;
+    margin-top: 1em;
+    padding: .4em;
+    border-radius: 1em;
+    border: 0px;
+    cursor: pointer;
+    box-shadow: 0px 1px 5px 2px rgb(0, 0, 0);
+}
 
+.close-btn:hover {
+    background-color: yellow;
+    color: black;
+}
 
 
 /* Styling for desktop */
