--- a/src/style.css
+++ b/src/style.css
@@ -24,7 +24,7 @@ body {
 }
 
 .home-page{
-    background: url("./assets/kenny-eliason-OjxsirfohHU-unsplash.jpg") no-repeat center center/ cover;
+    background: url("./assets/space-1164579.png") no-repeat center center/ cover;
     height: 100vh;
     color: white;
     position: relative;
@@ -271,7 +271,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 25em;
+    width: 20em;
     padding: 2em;
     border: 1px solid black;
     margin: 0 auto;
@@ -350,4 +350,14 @@ body {
     .empty-div {
         width: 53.4px;
     }
-  }
+
+    .info-container {
+        width: 25em;
+    }
+}
+
+@media screen and (min-width: 1000px) {
+    .home-page {
+        /* background: url("./assets/paul-volkmer-fX-qWsXl5x8-unsplash.jpg") no-repeat center center/ cover; */
+    }
+}
